Fix column wrapping using flex

--- a/css/main.css
+++ b/css/main.css
@@ -94,6 +94,8 @@ body {
   margin-top: 15px;
   min-height: 200px;
   overflow: hidden;
+  display: flex;
+  flex-wrap: wrap;
 }
 
 .supermarket-items > div {
